Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-146-gfb1582d https://git.reactos.org/?p=reactos.git;a=commit;h=fb1582d330116f9946e235d99b5384dd76b6fa79
Description
Tested reactos-bootcd-0.4.15-dev-1356-g44c6df4-x86-gcc-lin-dbg in virtualbox 6.1.16 r140961.
Steps to reproduce:
- Disable all network adapters.
- Run reactos and try to update rapps database. Wait long enough.
Expected: rapps displays a message with text "Unable to download the package! Check Internet Connection!"
Got: a message with text "Posting this operation to a worker thread for further processing is not safe at this time because it could lead to a system deadlock."
Tested these builds:
reactos-bootcd-0.4.15-dev-1356-g44c6df4-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-678-gfa8ce68-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-339-g7c9a8c0-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-170-g1f3cb13-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-155-gcf9ba2b-x86-gcc-lin-dbg
There weren't any gcc builds in between. I was using msvc builds to find a candidate commit.
reactos-bootcd-0.4.15-dev-148-gbfd02fa-x86-msvc-win-dbg
reactos-bootcd-0.4.15-dev-146-gfb1582d-x86-msvc-win-dbg
reactos-bootcd-0.4.15-dev-145-g8c4b0c9-x86-msvc-win-dbg
reactos-bootcd-0.4.15-dev-142-gc276681-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-141-gb3947d5-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-127-gd62b1a9-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-85-g8c5c47e-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-1-gd328584-x86-gcc-lin-dbg
Attachments
Issue Links
- blocks
-
CORE-18270 RAPPS fails to format error message when network is down and misses MessageBox to the user
-
- Untriaged
-
- is blocked by
-
CORE-17377 WinInet library is missing message table
-
- Open
-