[RAPPS] Properly use FormatMessageW with WinInet message table

Addendum to fb1582d. CORE-17375 CORE-17377